pasaron los archivos a extenxion php, include header y footer en todas las paginas

--- a/css/accesorie.css
+++ b/css/accesorie.css
@@ -11,7 +11,7 @@
     background-size: 100% 100%;
     background-attachment: fixed;
     height: 100vh;
-    
+    /* background-color: brown; */
   }
   main .container__accesories {
    
@@ -37,3 +37,4 @@
    
 
   }
+  
