--- a/css/header.css
+++ b/css/header.css
@@ -1,177 +1,317 @@
 /*HEADER*/
+* {
+  padding: 0px;
+  border: 0px;
+  margin: 0px;
+}
+.container__header {
+  width: 100%;
+  height: 140px;
+  border-bottom: 2px solid #eb6b02;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  background-color: white;
+  z-index: 1;
+}
 
-header .container__header {
-    width: 100%;
-    height: 140px;
-    border-bottom: 2px solid #eb6b02;
+.header__img {
+  padding-top: 20px;
+  padding-left: 20px;
+  margin-right: 40px;
+}
+.header__category i {
+  cursor: pointer;
+  font-size: 20px;
+}
+.header__category {
+  position: absolute;
+  display: flex;
+  padding-top: 80px;
+  margin-left: 280px;
+}
+.header__category .nav ul {
+  list-style: none;
+}
+.header__category .nav__item {
+  position: relative;
+}
+
+header .header__category .nav__item li:hover .subitem {
+  visibility: visible;
+  opacity: 1;
+}
+.header__category .subitem {
+  position: absolute;
+  width: 1100px;
+  left: -20px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.6s ease-in-out;
+  background: #19b4e8;
+  text-align: center;
+  border-radius: 8px;
+  display: flex;
+  margin-top: 10px;
+}
+.header__category .subitem li a {
+  width: 100%;
+  display: block;
+  padding: 15px 20px;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+.header__category .subitem li a:hover {
+  color: #000;
+}
+.header__category .category__copy {
+  margin-left: 10px;
+  text-transform: uppercase;
+  color: #2fc1ee;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.header__input {
+  padding-top: 80px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 800px;
+}
+.header__input input {
+  padding: 12px 180px;
+  border-radius: 30px;
+  border: none;
+  outline: none;
+  border: 1px solid #ccc;
+}
+
+.header__input input:hover {
+  box-shadow: 0 0 2px 1px #ccc;
+}
+
+.header__input i {
+  position: absolute;
+  right: 15px;
+  bottom: 15px;
+  cursor: pointer;
+  font-size: 18px;
+}
+.header__product {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 80px;
+  padding-right: 40px;
+}
+
+.header__product .product__link {
+  display: flex;
+  text-decoration: none;
+  color: #000;
+}
+.header__product .product__link i {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.header__product .product__link:hover {
+  transform: scale(1.1);
+}
+
+.header__product .product__copy {
+  margin-left: 10px;
+  text-transform: uppercase;
+  color: #2fc1ee;
+}
+
+.header__service {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__service .service__copy {
+  margin-left: 40px;
+  text-transform: capitalize;
+}
+
+.header__service i {
+  margin-left: 20px;
+  font-size: 24px;
+  cursor: pointer;
+  color: #3cb371;
+  margin-right: 20px;
+}
+
+.header__service i:hover {
+  transform: scale(1.2);
+}
+
+.header__service .service__paragraph {
+  border-left: 2px solid #2fc1ee;
+  padding-left: 10px;
+}
+@media screen and (max-width:1000px) {
+  .container__header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* position: relative; */
-    position: fixed;
-    background-color: white;
-    z-index: 1;
-    
-  }
-  
-  header .header__img {
-    padding-top: 20px;
-    padding-left: 20px;
-    margin-right: 40px;
-  }
-  
-  header .header__category i {
-    cursor: pointer;
-    font-size: 20px;
-  }
-  
-  header .header__category {
-    position: absolute;
-    display: flex;
-    /* justify-content: center;
-    align-items: center; */
-    padding-top: 80px;
-    margin-left: 280px;
-   
-  }
-  
-  header .header__category .nav ul {
-    list-style: none;
-  }
-  
-  header .header__category .nav__item {
+    background-color: #eb6b02;
     position: relative;
   }
-  
-  header .header__category .nav__item li:hover .subitem {
-    visibility: visible;
-    opacity: 1;
-  }
-  
-  header .header__category .subitem {
-    position: absolute;
-    width: 1100px;
-    left: -20px;
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.6s ease-in-out;
-    background: #00c3ff;
-    text-align: center;
-    border-radius: 8px;
-    display: flex;
+  .header__img {
     margin-top: 10px;
+    width: 120px;
+    height:120px;
   }
-  
-  header .header__category .subitem li a {
-    width: 100%;
+  .header__category {
+    margin-left: 135px;
+    margin-top: -60px;
+   
+  }
+  .nav__item .subitem{
+    width: 200px;
+    height: auto;
     display: block;
-    padding: 15px 20px;
-    color: #fff;
+    align-items: baseline;
+    background-color: whitesmoke;
+    margin-top: 50px;
+    
+  }
+  .header__category .subitem li a {
+    width: 100%;
+    padding: 7px 20px;
+    color: blue;
     text-decoration: none;
     font-size: 18px;
     text-transform: capitalize;
     font-weight: 600;
   }
   
-  header .header__category .subitem li a:hover {
-    color: #000;
+  .header__product {
+    margin-top: -60px;
   }
-  
-  header .header__category .category__copy {
-    margin-left: 10px;
-    text-transform: uppercase;
-    color: #2fc1ee;
-    font-size: 20px;
-    font-weight: 700;
-  }
-  
-  header .header__input {
-    padding-top: 80px;
-    position:absolute;
-    display: flex;
+  .header__input {
+    margin-right:60%;
+    margin-left: 20%;
+    margin-top: 90px;
+    padding: 8px 45px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
     justify-content: center;
-    align-items: center;
-    margin-left:800px;
-    
+    display: flex;
   }
-  
-  header .header__input input {
-    padding: 12px 180px;
+  .header__input input {
+    padding: 6px 90px;
     border-radius: 30px;
     border: none;
     outline: none;
     border: 1px solid #ccc;
   }
-  
-  header .header__input input:hover {
-    box-shadow: 0 0 2px 1px #ccc;
-  }
-  
-  header .header__input i {
+
+  .header__input i {
     position: absolute;
-    right: 15px;
+    right: 90px;
     bottom: 15px;
     cursor: pointer;
     font-size: 18px;
   }
-  
-  header .header__product {
+}
+
+@media screen and (max-width:320px) {
+  .container__header {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 80px;
-    padding-right: 40px;
+    background-color: #e9e4e0;
+    position: relative;
+    font-size: 10px;
   }
-  
-  header .header__product .product__link {
-    display: flex;
-    text-decoration: none;
-    color: #000;
+  .container__header img {
+   width: 95px;
+   height: 95px;
+   margin-left: 5px;
   }
-  
-  header .header__product .product__link i {
-    font-size: 20px;
+  .header__category {
+    margin-left: 100px;
+    margin-top: -60px;
+    
+   
+  }
+  .header__category i {
     cursor: pointer;
+    font-size: 13px;
   }
-  
-  header .header__product .product__link:hover {
-    transform: scale(1.1);
-  }
-  
-  header .header__product .product__copy {
-    margin-left: 10px;
+  .header__category .category__copy {
+    margin-left: 5px;
     text-transform: uppercase;
     color: #2fc1ee;
+    font-size: 13px;
+    font-weight: 700;
   }
-  
-  header .header__service {
-    position: absolute;
-    top: 20px;
-    right: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .nav__item .subitem{
+    width: 150px;
+    height: auto;
+    display: block;
+    align-items: baseline;
+    background-color: whitesmoke;
+    margin-top: 50px;
+    
   }
-  
-  header .header__service .service__copy {
-    margin-left: 40px;
+  .header__category .subitem li a {
+    width: 100%;
+    padding: 7px 20px;
+    color: blue;
+    text-decoration: none;
+    font-size: 13px;
     text-transform: capitalize;
+    font-weight: 600;
   }
-  
-  header .header__service i {
-    margin-left: 20px;
-    font-size: 24px;
+ 
+  .header__product {
+    margin-top: -60px;
+    font-size: 12px;
+  }
+  .header__product .product__link i {
+    font-size: 12px;
     cursor: pointer;
-    color: #3cb371;
-    margin-right: 20px;
   }
-  
-  header .header__service i:hover {
-    transform: scale(1.2);
+  .header__input {
+    margin-right:60%;
+    margin-left: 3%;
+    margin-top: 90px;
+    padding: 8px 40px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    justify-content: center;
+    display: flex;
+   
   }
-  
-  header .header__service .service__paragraph {
-    border-left: 2px solid #2fc1ee;
-    padding-left: 10px;
+
+  .header__input input {
+    padding: 3px 30px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+    border: 1px solid #ccc;
+    margin-left: 15px;
+    font-size: 7px;
   }
+
+  .header__input i {
+    position: absolute;
+    right: 90px;
+    bottom: 12px;
+    cursor: pointer;
+    font-size: 13px;
+    margin-left: 10px;
   
+  }
+}
